--- a/025.StateMode/tsconfig.json
+++ b/025.StateMode/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES5",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-    "module": "esnext",
-    "baseUrl": "./",
+    "module": "CommonJS",
+    "isolatedModules": true
   },
 }
