--- a/src/025.StateMode/tsconfig.json
+++ b/src/025.StateMode/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES5",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
     "module": "CommonJS",
-    "baseUrl": "./",
-    "esModuleInterop": true
+    "isolatedModules": true
   },
 }
