--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
     "jest": "^27.4.7",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
