--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-demo",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "index.js",
   "repository": "git@github.com:ginlink/js-demo.git",
   "author": "ginlink <ginlink@163.com>",
@@ -12,9 +12,12 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
+    "@ginlink/eslint-config": "^0.1.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
+    "eslint": "^8.16.0",
     "jest": "^27.4.7",
+    "prettier": "^2.6.2",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   }
