--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "release": "standard-version"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
@@ -18,6 +19,7 @@
     "eslint": "^8.16.0",
     "jest": "^27.4.7",
     "prettier": "^2.6.2",
+    "standard-version": "^9.5.0",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
   }
